--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"LICENSE",
 		"README.md",
 		"cjs/*",
+		"routes.json",
 		"!*.map"
 	],
 	"keywords": [
@@ -48,5 +49,5 @@
 		"build": "tsc -p tsconfig.json"
 	},
 	"types": "./cjs/summary.d.ts",
-	"version": "0.0.1"
+	"version": "0.0.2"
 }
