--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
 	"exports": "./cjs/summary.js",
 	"homepage": "https://it.rocks",
 	"files": [
+		"config.yaml",
 		"LICENSE",
 		"README.md",
 		"cjs/*",
-		"routes.json",
 		"!*.map"
 	],
 	"keywords": [
@@ -49,5 +49,5 @@
 		"build": "tsc -p tsconfig.json"
 	},
 	"types": "./cjs/summary.d.ts",
-	"version": "0.0.4"
+	"version": "0.0.5"
 }
