--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
 		"url": "git+https://github.com/itrocks-ts/summary.git"
 	},
 	"scripts": {
-		"build": "tsc -p tsconfig.json"
+		"build": "tsc"
 	},
 	"types": "./cjs/summary.d.ts",
-	"version": "0.0.5"
+	"version": "0.0.6"
 }
